# fitagent

./: .env.example  .gitignore  Dockerfile  Dockerfile.http-only  README.md  VERCEL_READY.md  agent.py  agent_metadata.py  akash-sdl.yaml  client_example.py  debug_venice.py  fitagent_coach.py  fitagent_coach_mock.py  frontend_integration.md  get_agent_address.py  http_wrapper.py  http_wrapper_only.py  pyproject.toml  requirements.txt  requirements_enhanced.txt  test_agent.py  test_localhost.py  test_web_access.py  venice_ai_client.py
.avctl/: config.toml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  TASK_5_COMPLETION.md
backend/src/: config.rs  lib.rs  main.rs
backend/src/handlers/: coaching.rs  goal.rs  health.rs  mod.rs  photo.rs  user.rs
backend/src/models/: coaching.rs  error.rs  mod.rs  nutrition.rs  user.rs
backend/src/services/: ai.rs  blockchain.rs  mod.rs  user.rs  vision.rs
backend/src/utils/: image.rs  mod.rs  validation.rs
fitagent/: .gitignore  .vercelignore  DEPLOYMENT.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vercel.json
fitagent/app/: globals.css  layout.tsx  page.tsx  providers.tsx
fitagent/app/.well-known/farcaster.json/: route.ts
fitagent/app/api/frame/: route.ts
fitagent/app/api/webhook/: route.ts
fitagent/components/: CameraCapture.tsx  ManualNutritionEntry.tsx
fitagent/fitagent-backend/: Cargo.toml
fitagent/hooks/: index.ts  useFitAgent.ts
fitagent/providers/: MiniKitProvider.tsx
fitagent/types/: index.ts
