[package]
name = "fitagent-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"
actix-cors = "0.7"
actix-multipart = "0.6"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client for external APIs
reqwest = { version = "0.11", features = ["json", "multipart"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment configuration
dotenv = "0.15"
config = "0.14"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
env_logger = "0.10"
log = "0.4"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Base64 encoding/decoding for images
base64 = "0.21"

# Image processing
image = "0.24"

# Database (for future Tableland integration)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Rate limiting
governor = "0.6"

# Validation
validator = { version = "0.16", features = ["derive"] }
